Fix bugs: Top margin for nav menu + gallery nav menu collapse width

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@ $content-width:    100%;
 $on-palm:          600px;
 $on-laptop:        800px;
 $header-min:       1030px;
-$gallery-nav-small: 880px;
+$gallery-nav-small: 1160px;
 
 $header-background:  "/images/background.jpg";
 
